# awesome-BA-exercise

./: README.md
ceres/: BA_ceres.cpp  CMakeLists.txt  Ceres_exam1_hello_world.cpp  Ceres_exam2_BAL.cpp  Ceres_exam3_helloworld_numeric_diff.cpp  Ceres_exam4_helloworld_analytic_diff.cpp  refs.txt
eigen/: BA_eigen.cpp  CMakeLists.txt  refs.txt
g2o/: BA_g2o.cpp  CMakeLists.txt  refs.txt
